--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,7 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },"src/Gallery"
             ],
             "styles": [
               "src/styles.css"
